Fix pointMarker context

PointMarker was created without context so it couldn't access different
items through id use.

Fixes: QTBUG-122169
Pick-to: 6.7
Change-Id: I8dd225365aa0111501f2344c356eb70592f7546d
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>